# fedik_proj

./: .gitignore  CMakeLists.txt  array2d.h  array2d_meta.h  avx_matrix.h  avx_vector.h  fedik_proj.cpp  fedik_proj.h  lazy_tools.h  lazy_vector_meta.h  main.cpp  matrix.h  matrix_lazy.h  matrix_operation.h  matrix_operations.h  searches.h  test.csv  vector.h  vector_lazy.h
output/: main
